--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             yLabel="Fläche"
             xLabel="Datum"
             datecolumn="zeitLabel"
-            valuecolumn="wert">
+            valuecolumn="wert"
+            endpointUrl="https://lindas-data.ch/sparql">
           </ssz-line>
         </div>
         <div class="col-md-8">
@@ -31,7 +32,8 @@
             yLabel="Fläche"
             xLabel="Datum"
             datecolumn="zeitLabel"
-            valuecolumn="wert">
+            valuecolumn="wert"
+            endpointUrl="https://lindas-data.ch/sparql">
           </ssz-line>
         </div>
         <div class="col-md-8">
