--- a/elements/ssz-line.min.html
+++ b/elements/ssz-line.min.html
@@ -16986,7 +16986,10 @@ class SszChart extends Polymer.Element {
  
   static get properties() {
     return {
-      query: String,
+      query: {
+        type: String,
+        observer: '_queryChanged',
+      },
       endpointurl:  String,
       description: String,
       datecolumn: String,
@@ -16998,9 +17001,13 @@ class SszChart extends Polymer.Element {
     }
   };
 
+  _queryChanged(e) {
+    if (this.query) {
+      this.render()
+    }
+  }
 
-  ready() {
-    super.ready()
+  render() {
     var element = this.$['sszvis-line']
 
     /* Configuration
