--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ WHERE
         FILTER ( ?flaecheLabel IN ("BBA1210") )
       }
   }
-ORDER BY ?zeitLabel
+ORDER BY ?date
             </textarea>
             <button type="button" class="btn" onClick="querySSZ3()">Run Query!</button>
           </div>
