--- a/elements/ssz-line.html
+++ b/elements/ssz-line.html
@@ -115,8 +115,8 @@ class SszChart extends Polymer.Element {
         var iso = d3.time.format.utc("%Y-%m-%dT%H:%M:%SZ")
         var data =  res.map(function(d) {
           return {
-            date:  iso.parse(d[config.dateColumn]),
-            value: sszvis.parse.number(d[config.valueColumn])
+            date:  d[config.dateColumn],
+            value: d[config.valueColumn]
           }
         })
         actions.prepareState(data);
