--- a/elements/ssz-line.html
+++ b/elements/ssz-line.html
@@ -37,12 +37,13 @@ class SszLine extends Polymer.Element {
     }
   };
 
-  ready() {
+/*  ready() {
         super.ready();
         [...this.getElementsByTagName('ssz-annotation')].forEach( function(el) {
           console.dir(el)
         });
   };
+*/
 
   render() {
     var element = this.$['sszvis-line']
