--- a/elements/ssz-line.min.html
+++ b/elements/ssz-line.min.html
@@ -17011,12 +17011,13 @@ class SszLine extends Polymer.Element {
     }
   };
 
-  ready() {
+/*  ready() {
         super.ready();
         [...this.getElementsByTagName('ssz-annotation')].forEach( function(el) {
           console.dir(el)
         });
   };
+*/
 
   render() {
     var element = this.$['sszvis-line']
