--- a/index-data.html
+++ b/index-data.html
@@ -11,9 +11,7 @@
       <h1>Data Webcomponents</h1>
       <div class="row">
         <div class="col-md-4">
-          <ssz-widget
-            id="test">
-          </ssz-widget>
+          <ssz-widget id="test" api="http://ld.stadt-zuerich.ch/api" property="http://ld.stadt-zuerich.ch/api/statistics/view/flaechen"></ssz-widget>
         </div>
         <div class="col-md-8">
           <h3>Widget</h3>
