--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="//cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/paper/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <script src="webcomponentsjs/webcomponents-loader.js"></script>
-  <link rel="import" href="elements/ssz-line.min.html">
+  <link rel="import" href="elements/ssz-sparql-line.min.html">
   </head>
   <body>
     <div class="container">
